...
    "habits.startDate" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Start Date"
          }
        }
      }
    },
    "habits.startDateAfterLogs" : {
      "extractionState" : "manual",
...
